# Cyfed

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  nginx.conf  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/dashboard/: package.json
docker/: dashboard.Dockerfile  flower-server.Dockerfile  local-node.Dockerfile
docs/: administrator_guide.md  api_reference.md  architecture.md  benchmark.md  database.md  datasets.md  demo_guide.md  deployment.md  developer_guide.md  fedcore.md  federated_benchmark.md  installation_guide.md  local_training.md  model_validation.md  operations_guide.md  sequence_diagrams.md  supabase_schema.sql  troubleshooting_guide.md  uml.md
docs/investor/: FedSOC_AI_One_Pager.md  architecture_overview.md  business_value.md  competitive_advantages.md  product_overview.md  technology_stack.md
python/fedcore/: README.md  pyproject.toml
python/fedcore/fedcore/: __init__.py
python/fedcore/fedcore/federation/: __init__.py  aggregation.py  base_model.py  checkpoint.py  client.py  config.py  metrics.py  registry.py  server.py  strategy.py  transport.py
python/fedsoc/: README.md  pyproject.toml
python/fedsoc/fedsoc/: __init__.py  dataset.py  evaluation.py  models.py  preprocessing.py  run_benchmark.py  security.py  services.py  trainer.py
python/fedsoc/fedsoc/ai/: __init__.py  evaluator.py  prompts.py  providers.py  run_analyst.py  schemas.py  service.py
python/fedsoc/fedsoc/tests/: test_ai_analyst.py  test_benchmark.py  test_federation.py
services/flower-server/: README.md  pyproject.toml  server.py
(+66 files in other folders)
