[project]
name = "fedcore"
version = "0.1.0"
description = "Core Federated Learning Platform (FedCore) powered by Flower"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flwr>=1.8.0",
    "numpy>=1.26.0",
    "loguru>=0.7.0",
    "pydantic>=2.6.0",
    "scikit-learn>=1.4.0",
    "httpx>=0.27.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
