[project]
name = "fedsoc"
version = "0.1.0"
description = "Federated Security Operations Center (FedSOC) Domain Modules"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fedcore",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.11.0",
    "scipy>=1.18.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0"
]

[tool.uv.sources]
fedcore = { path = "../fedcore" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
